--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,10 @@ requires-python = ">=3.13"
 dependencies = [
     "fastapi (>=0.115.12,<0.116.0)",
     "uvicorn (>=0.34.2,<0.35.0)",
-    "httpx (>=0.28.1,<0.29.0)"
+    "httpx (>=0.28.1,<0.29.0)",
+    "pydantic (>=2.11.4,<3.0.0)",
+    "pydantic-settings (>=2.9.1,<3.0.0)",
+    "fastapi-middleware (>=0.2.1,<0.3.0)"
 ]
 
 
@@ -20,4 +23,5 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.5"
+pytest-asyncio = "^0.26.0"
 
