--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,6 @@ build-backend = "poetry.core.masonry.api"
 pytest = "^8.3.5"
 pytest-asyncio = "^0.26.0"
 
+[[tool.poetry.packages]]
+include = "mvp_be"
+
