--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,9 @@ dependencies = [
     "httpx (>=0.28.1,<0.29.0)",
     "pydantic (>=2.11.4,<3.0.0)",
     "pydantic-settings (>=2.9.1,<3.0.0)",
-    "fastapi-middleware (>=0.2.1,<0.3.0)"
+    "fastapi-middleware (>=0.2.1,<0.3.0)",
+    "python-magic (>=0.4.27,<0.5.0)",
+    "python-multipart (>=0.0.20,<0.0.21)"
 ]
 
 
